@@ -4,7 +4,8 @@ All notable changes to this project will be documented in this file.
 ## [1.18] 2020-30-4
 
 ### Added
-  - Workbook#worksheets
+  - Workbook#worksheets, worksheets_count
+  - Worksheet#each_value
   - Range#value, value=
 
 ### Changed
